--- a/.github/workflows/checkoutservice.yaml
+++ b/.github/workflows/checkoutservice.yaml
@@ -19,10 +19,9 @@ jobs:
       service-name: checkoutservice
       service-path: src/checkoutservice
       dockerfile: Dockerfile
-      k8s-repo: github.com/c0dysharma/microservices-k8s.git
+      k8s-repo: c0dysharma/microservices-k8s
       k8s-values-file: values/checkout-service-values.yaml
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       K8S_REPO_TOKEN: ${{ secrets.K8S_REPO_TOKEN }}
-      GH_USER: ${{ secrets.GH_USER }}
