--- a/.github/workflows/adservice.yaml
+++ b/.github/workflows/adservice.yaml
@@ -19,7 +19,7 @@ jobs:
       service-name: adservice
       service-path: src/adservice
       dockerfile: Dockerfile
-      k8s-repo: github.com/c0dysharma/microservices-k8s.git
+      k8s-repo: c0dysharma/microservices-demo-k8s
       k8s-values-file: values/ad-service-values.yaml
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
