--- a/.github/workflows/emailservice.yaml
+++ b/.github/workflows/emailservice.yaml
@@ -19,7 +19,9 @@ jobs:
       service-name: emailservice
       service-path: src/emailservice
       dockerfile: Dockerfile
-      registry: docker.io
+      k8s-repo: c0dysharma/microservices-demo-k8s
+      k8s-values-file: values/email-service-values.yaml
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      K8S_REPO_TOKEN: ${{ secrets.K8S_REPO_TOKEN }}
