--- a/.github/workflows/paymentservice.yaml
+++ b/.github/workflows/paymentservice.yaml
@@ -19,7 +19,9 @@ jobs:
       service-name: paymentservice
       service-path: src/paymentservice
       dockerfile: Dockerfile
-      registry: docker.io
+      k8s-repo: c0dysharma/microservices-demo-k8s
+      k8s-values-file: values/payment-service-values.yaml
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      K8S_REPO_TOKEN: ${{ secrets.K8S_REPO_TOKEN }}
