--- a/.github/workflows/recommendationservice.yaml
+++ b/.github/workflows/recommendationservice.yaml
@@ -1,26 +1,26 @@
-name: Frontend CI
+name: RecommendationService CI
 
 on:
   push:
     branches: [main]
     paths:
-      - 'src/frontend/**'
-      - '.github/workflows/frontend.yaml'
+      - 'src/recommendationservice/**'
+      - '.github/workflows/recommendationservice.yaml'
   pull_request:
     branches: [main]
     paths:
-      - 'src/frontend/**'
+      - 'src/recommendationservice/**'
 
 jobs:
-  build-frontend:
+  build-recommendationservice:
     if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/build-service-template.yaml
     with:
-      service-name: frontend
-      service-path: src/frontend
+      service-name: recommendationservice
+      service-path: src/recommendationservice
       dockerfile: Dockerfile
       k8s-repo: c0dysharma/microservices-demo-k8s
-      k8s-values-file: values/frontend-values.yaml
+      k8s-values-file: values/recommendation-service-values.yaml
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
