--- a/.github/workflows/adservice.yaml
+++ b/.github/workflows/adservice.yaml
@@ -1,27 +1,41 @@
-name: AdService CI
+name: Microservices CI Pipeline
 
 on:
   push:
-    branches: [main]
-    paths:
-      - 'src/adservice/**'
-      - '.github/workflows/adservice.yaml'
-  pull_request:
-    branches: [main]
-    paths:
-      - 'src/adservice/**'
+    branches:
+      - main
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  build-adservice:
-    if: github.ref == 'refs/heads/main'
-    uses: ./.github/workflows/build-service-template.yaml
-    with:
-      service-name: adservice
-      service-path: src/adservice
-      dockerfile: Dockerfile
-      k8s-repo: c0dysharma/microservices-demo-k8s
-      k8s-values-file: values/ad-service-values.yaml
-    secrets:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      K8S_REPO_TOKEN: ${{ secrets.K8S_REPO_TOKEN }}
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Checkout source
+      uses: actions/checkout@v4
+
+    - name: Configure AWS Credentials (OIDC)
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/github-actions-eks-staging-demo
+        aws-region: ap-south-1
+
+    - name: Login to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v2
+
+    - name: Build Docker image
+      run: |
+        docker build -t microservices-demo .
+
+    - name: Tag Docker image
+      run: |
+        docker tag microservices-demo:latest \
+        <ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/microservices-demo:latest
+
+    - name: Push image to ECR
+      run: |
+        docker push <ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/microservices-demo:latest
