--- a/src/adservice/Dockerfile
+++ b/src/adservice/Dockerfile
@@ -40,4 +40,4 @@ COPY --from=builder /app .
 
 EXPOSE 9555
 ENTRYPOINT ["/app/build/install/hipstershop/bin/AdService"]    
-# rebuild trigger
+# #rebuild triggerrrr
