--- a/src/adservice/Dockerfile
+++ b/src/adservice/Dockerfile
@@ -1,4 +1,4 @@
-#alss# Copyright 2020 Google LLC
+#aeeelss# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
